# arithmetic-parser-haskell

./: CHANGELOG.md  arithmetic-parser-haskell.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.0.1/: arithmetic-parser-haskell-0.1.0.0-inplace.conf  package.cache
src/: ArithmeticParser.hs  Basic.hs  DistWrap.hs  ExceptEvaluator.hs  Join.hs  SimpleEvaluator.hs
