cabal-version:      2.4
name:               arithmetic-parser-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ilona Bozhe
maintainer:         warmte00@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable arithmetic-parser-haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    scientific, arithmetic-parser-haskell, base ^>=4.15.0.0
    hs-source-dirs:   app
    default-language: Haskell2010

library 
    exposed-modules: Basic, ArithmeticParser, DistWrap, Join, ExceptEvaluator, SimpleEvaluator
    hs-source-dirs:  src
    build-depends:   scientific, base ^>= 4.15.0.0